--- a/ChartsServer/appsettings.json
+++ b/ChartsServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SQL": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SatisDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
